--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -434,7 +434,7 @@
         (change) Server: Fix for Windows path {contributed by Mattze96}.
       </li>
       <li>
-        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com" class="xowa-visited">App/Wiki_types/Wikia.com</a>
+        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com">App/Wiki_types/Wikia.com</a>
       </li>
     </ul>
     <h2>
@@ -1497,7 +1497,7 @@
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
@@ -1857,7 +1857,7 @@
     </p>
     <ul>
       <li>
-        (add) Search syntax supports AND, OR, quotes; EX:http://en.wikipedia.org/wiki/Special:Search/Earth_AND_History?fulltext=y&amp;search=Earth+AND+History {requested by Schnark}. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_46" title="App/Search" class="xowa-visited">App/Search</a>
+        (add) Search syntax supports AND, OR, quotes; EX:http://en.wikipedia.org/wiki/Special:Search/Earth_AND_History?fulltext=y&amp;search=Earth+AND+History {requested by Schnark}. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_46" title="App/Search">App/Search</a>
       </li>
       <li>
         (add) Version 2 category upgrade can be done through UI. See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_47" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a> and <a href="http://xowa.org/home/wiki/Help:Core/Category/V2/Setup.html" id="xolnki_48" title="Help:Core/Category/V2/Setup">Help:Core/Category/V2/Setup</a>
