--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -869,7 +869,7 @@
     </p>
     <ul>
       <li>
-        Wikivoyage.RelatedArticles: Fix {{#related:Page}} not working (affects many en.v pages showing {{#related}} at bottom); EX:/xowa/bin/any/xowa/cfg/lang/en.gfs. See: <a href="https://en.wikivoyage.org/wiki/China" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/China</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_9" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
+        Wikivoyage.RelatedArticles: Fix {{#related:Page}} not working (affects many en.v pages showing {{#related}} at bottom); EX:/xowa/bin/any/xowa/cfg/lang/en.gfs. See: <a href="https://en.wikivoyage.org/wiki/China" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/China</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_9" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
