--- a/home/wiki/Change_log/v4.3.0.1702.html
+++ b/home/wiki/Change_log/v4.3.0.1702.html
@@ -30,7 +30,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -71,7 +71,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiDirectory.html" id="xolnki_5" title="Special:XowaWikiDirectory" class="xowa-visited">Special:XowaWikiDirectory</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiDirectory.html" id="xolnki_5" title="Special:XowaWikiDirectory">Special:XowaWikiDirectory</a>
       </dd>
     </dl>
     <ul>
@@ -124,7 +124,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaSql.html" id="xolnki_6" title="Special:XowaSql" class="xowa-visited">Special:XowaSql</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaSql.html" id="xolnki_6" title="Special:XowaSql">Special:XowaSql</a>
       </dd>
     </dl>
     <p>
