--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,15 +46,15 @@
           version:
         </td>
         <td>
-          4.3.0.1702 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
+          4.5.0.1703 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
         <td>
-          build_date:
+          build date:
         </td>
         <td>
-          2017-02-22 00:44:13
+          2017-03-24 23:09:04
         </td>
       </tr>
       <tr>
@@ -116,7 +116,7 @@
             </tr>
             <tr>
               <td>
-                Schnark
+                <a href="https://de.wikipedia.org/wiki/Benutzer:Schnark" rel="nofollow" class="external text">Schnark</a>
               </td>
               <td>
                 <ul>
@@ -167,7 +167,7 @@
             </tr>
             <tr>
               <td>
-                treck
+                <a href="https://github.com/piotrex/" rel="nofollow" class="external text">treck</a>
               </td>
               <td>
                 <ul>
@@ -206,7 +206,7 @@
             </tr>
             <tr>
               <td>
-                Anselm
+                <a href="https://github.com/AnselmD" rel="nofollow" class="external text">Anselm</a>
               </td>
               <td>
                 <ul>
@@ -221,7 +221,7 @@
             </tr>
             <tr>
               <td>
-                Mattze96
+                <a href="https://github.com/Mattze96" rel="nofollow" class="external text">Mattze96</a>
               </td>
               <td>
                 <ul>
@@ -236,13 +236,37 @@
             </tr>
             <tr>
               <td>
-                zjzengdongyang
+                <a href="https://github.com/zjzengdongyang" rel="nofollow" class="external text">zjzengdongyang</a>
               </td>
               <td>
                 <ul>
                   <li>
                     Chinese localization
                   </li>
+                  <li>
+                    multiple defect detection
+                  </li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <table class='wikitable' style='border:1px'>
+            <tr>
+              <th>
+                name
+              </th>
+              <th>
+                contribution
+              </th>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://github.com/Ope30" rel="nofollow" class="external text">Ope30</a>
+              </td>
+              <td>
+                <ul>
                   <li>
                     multiple defect detection
                   </li>
@@ -363,6 +387,39 @@
       </tr>
       <tr>
         <td>
+          <a href="https://lucene.apache.org/" rel="nofollow" class="external text">Lucene</a>
+        </td>
+        <td>
+          Full-text search library
+        </td>
+        <td>
+          <a href="http://www.apache.org/licenses/LICENSE-2.0" rel="nofollow" class="external text">Apache2</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://github.com/lukhnos/mobilelucene/" rel="nofollow" class="external text">Lucene mobile</a>
+        </td>
+        <td>
+          Full-text search library for mobile devices
+        </td>
+        <td>
+          Unknown. Presumably Apache2
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="http://site.icu-project.org/home" rel="nofollow" class="external text">icu4j</a>
+        </td>
+        <td>
+          International Components for Unicode (used for Category Sorting)
+        </td>
+        <td>
+          <a href="http://www.unicode.org/copyright.html#License" rel="nofollow" class="external text">BSD</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
           <a href="http://commons.apache.org/proper/commons-compress/" rel="nofollow" class="external text">Apache Commons Compress</a>
         </td>
         <td>
@@ -370,6 +427,17 @@
         </td>
         <td>
           <a href="http://www.apache.org/licenses/" rel="nofollow" class="external text">Apache v2.0</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="http://tukaani.org/xz/java.html/" rel="nofollow" class="external text">XZ for Java</a>
+        </td>
+        <td>
+          XZ compression / decompression library
+        </td>
+        <td>
+          <a href="http://tukaani.org/xz/java.html" rel="nofollow" class="external text">Public Domain</a>
         </td>
       </tr>
       <tr>
@@ -419,6 +487,17 @@
         </td>
         <td>
           <a href="https://github.com/jpillora/notifyjs" rel="nofollow" class="external text">MIT</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://github.com/fabien-d/alertify.js" rel="nofollow" class="external text">alertify</a>
+        </td>
+        <td>
+          Notification library
+        </td>
+        <td>
+          <a href="https://github.com/fabien-d/alertify.js" rel="nofollow" class="external text">MIT</a>
         </td>
       </tr>
       <tr>
@@ -776,6 +855,17 @@
         </td>
         <td>
           <a href="http://php.net/license/" rel="nofollow" class="external text">PHP v3.01</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/projects/openiconlibrary/" rel="nofollow" class="external text">Open icon library</a>
+        </td>
+        <td>
+          Icons
+        </td>
+        <td>
+          <a href="https://sourceforge.net/projects/openiconlibrary/" rel="nofollow" class="external text">Unknown</a>
         </td>
       </tr>
       <tr>
