--- a/home/wiki/Wiki_setup/Simple_wikis.html
+++ b/home/wiki/Wiki_setup/Simple_wikis.html
@@ -106,9 +106,12 @@
                 <li class="toclevel-3 tocsection-13">
                   <a href="#simple.wikipedia.org_Images_.282017-01.29"><span class="tocnumber">4.1.2</span> <span class="toctext">simple.wikipedia.org Images (2017-01)</span></a>
                 </li>
+                <li class="toclevel-3 tocsection-14">
+                  <a href="#simple.wikipedia.org_Articles_.282016-12.29"><span class="tocnumber">4.1.3</span> <span class="toctext">simple.wikipedia.org Articles (2016-12)</span></a>
+                </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-14">
+            <li class="toclevel-2 tocsection-15">
               <a href="#All_links"><span class="tocnumber">4.2</span> <span class="toctext">All links</span></a>
             </li>
           </ul>
@@ -143,6 +146,15 @@
         <dl>
           <dd>
             Simple English Wikipedia - Images (2017-01) [2.9 GB]
+          </dd>
+        </dl>
+      </dd>
+    </dl>
+    <dl>
+      <dd>
+        <dl>
+          <dd>
+            Simple English Wikipedia - Articles (2016-12) [534.77 MB]
           </dd>
         </dl>
       </dd>
@@ -293,6 +305,66 @@
         </li>
       </ul>
     </div>
+    <h4>
+      <span class="mw-headline" id="simple.wikipedia.org_Articles_.282016-12.29">simple.wikipedia.org Articles (2016-12)</span>
+    </h4>
+    <div style="margin-left: 2em">
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.search.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.search.core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.category.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.category.core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.category.link_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.category.link_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.000.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.000.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.004.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.004.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.014.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.014.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.008.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.000.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.000.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.002.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.002.zip</a>
+        </li>
+      </ul>
+    </div>
     <h3>
       <span class="mw-headline" id="All_links">All links</span>
     </h3>
@@ -310,6 +382,17 @@ http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_
 http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.002.zip
 http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.004_db.001.zip
 http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.014_db.001.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_core.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.search.core.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.000.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.004.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.014.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_html_ns.008.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.category.core.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.category.link_db.001.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.000.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.001.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-12_xtn.fulltext_search.002.zip
 
 </pre>
   
