--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2017-03-28</b> 2017-03 English Wikipedia, 2017-03 Russian, 2017-03 Hindi, and 2017-03 Tibetan wikis released<br/>
+  <ul>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Russian_wikis" class="external text" rel="nofollow">Russian wikis</a>
+    </li>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Hindi_wikis" class="external text" rel="nofollow">Hindi wikis</a>
+    </li>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Tibetan_wikis" class="external text" rel="nofollow">Tibetan wikis</a>
+    </li>
+  </ul>
+
   <b>2017-03-06</b> 2017-02 German and French Wikipedia released<br/>
   <ul>
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German Wikipedia</a>
@@ -152,51 +164,6 @@
     </li>
   </ul>
 
-  <b>2016-11-13</b> 2016-10 French, Polish, Swedish, Spanish wikis released. Also, 2016-11 English Wikipedia <br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_plwiki_latest" class="external text" rel="nofollow">Polish wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_svwiki_latest" class="external text" rel="nofollow">Swedish wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_eswiki_latest" class="external text" rel="nofollow">Spanish wikis</a>
-    </li>
-  </ul>
-  
-  <b>2016-10-24</b> 2016-10 English and German Wikis updated (Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews)<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2016-10-16</b> 2016-10 English and German Wikipedia updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2016-09-25</b> 2016-09 French, English and German Wikipedia updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2016-09-05</b> Czech Wikis updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_cswiki_latest" class="external text" rel="nofollow">Czech wikis</a>
-    </li>
-  </ul>
 
 </td>
 </tr>
