--- a/home/wiki/App/Full-text_search/Lucene/Search_indexes/Getting.html
+++ b/home/wiki/App/Full-text_search/Lucene/Search_indexes/Getting.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Change log/v4.4.0.1703 - XOWA</title>
+  <title>App/Full-text search/Lucene/Search indexes/Getting - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,189 +11,79 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Change log/v4.4.0.1703</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>App/Full-text search/Lucene/Search indexes/Getting</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
+    <div id="toc" class="toc">
+      <div id="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#Overview"><span class="tocnumber">1</span> <span class="toctext">Overview</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-2">
+              <a href="#Downloading_from_archive.org_for_2017-03_English_Wikipedia"><span class="tocnumber">1.1</span> <span class="toctext">Downloading from archive.org for 2017-03 English Wikipedia</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-3">
+              <a href="#Downloading_from_Download_Central_for_2017-04_wikis_and_later"><span class="tocnumber">1.2</span> <span class="toctext">Downloading from Download Central for 2017-04 wikis and later</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-4">
+              <a href="#Building_indexes_for_already-existing_Download_Central_wikis"><span class="tocnumber">1.3</span> <span class="toctext">Building indexes for already-existing Download Central wikis</span></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
     <h2>
-      <span class="mw-headline" id="v4.4.0.1703_.282017-03-06.29">v4.4.0.1703 (2017-03-06)</span>
+      <span class="mw-headline" id="Overview">Overview</span>
     </h2>
+    <p>
+      Full-text search requires custom files in order to work.
+    </p>
+    <p>
+      Currently, there are two ways of getting these files
+    </p>
     <h3>
-      <span class="mw-headline" id="Wiki">Wiki</span>
+      <span class="mw-headline" id="Downloading_from_archive.org_for_2017-03_English_Wikipedia">Downloading from archive.org for 2017-03 English Wikipedia</span>
     </h3>
-    <ul>
-      <li>
-        Package: Publish 2017-02 German Wikipedia.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_2" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Package: Publish 2017-02 French Wikipedia.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_3" title="Wiki setup/French wikis">Wiki_setup/French_wikis</a>
-      </dd>
-    </dl>
-    <h2>
-      <span class="mw-headline" id="PC">PC</span>
-    </h2>
     <p>
-      <b>major</b>
+      For 2017-03 English Wikipedia, the search index must be downloaded manually from archive.org
     </p>
     <ul>
       <li>
-        Gui: Add night mode. {assisted by anonymous4; requested by Lasairiona}
+        Download the following file: <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2017-03_fulltext.search.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2017-03_fulltext.search.7z</a>
       </li>
-    </ul>
-    <ul>
       <li>
-        Personal_wikis: Add page backup feature. {suggested by Lasairiona}
+        Unzip it to <code>C:\xowa\wiki\en.wikipedia.org</code>. When done, you should have a file like <code>C:\xowa\wiki\en.wikipedia.org\data\search\java7-v1\_1s6_Lucene50_0.doc</code>
       </li>
-    </ul>
-    <ul>
       <li>
-        Full-text search: Add preliminary implementation of full-text search for personal wikis.
+        Run XOWA and go to <code>en.wikipedia.org/wiki/Special:XowaSearch</code>
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaSearch.html" id="xolnki_4" title="Special:XowaSearch" class="xowa-visited">Special:XowaSearch</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        XULRunner: Fix bad layout on French Wikipedia main page.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Upgrade xulrunner from v24 to v31.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: flex:.35em.
-      </dd>
-    </dl>
+    <h3>
+      <span class="mw-headline" id="Downloading_from_Download_Central_for_2017-04_wikis_and_later">Downloading from Download Central for 2017-04 wikis and later</span>
+    </h3>
     <p>
-      <b>minor</b>
+      Full-text search indexes will be automatically part of any new wiki on Download Central uploaded on 2017-04 or later.
     </p>
-    <ul>
-      <li>
-        Wikibase: Fix multiple "unknown datavalue type" on many fr.w pages.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Message</span>: <code>Erreur de script: =Module:Wikidata:522 unknown datavalue type. Erreur de script: =Module:Coordinates:808 unknown datavalue type.</code>
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Use scribunto key name for datatypes.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Louis_Malle" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Louis_Malle</a> <a href="https://fr.wikipedia.org/wiki/Toulon" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Toulon</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Personal_wikis: Update modified date on page save. {detected by Lasairiona}
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Personal_wikis: Show personal wikis in left sidebar. {detected by Lasairiona}
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Personal_wikis: Add timestamp to quick save status message.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: saved Main Page (01:02:03.456).
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Personal_wikis: Speed up creation of wikis.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Do not download css when creating wiki.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Personal_wikis: Speed up loading of wikis.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Do not load every personal wiki on startup.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        App: Speed up loading of app. {detected by Lasairiona}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Remove initialMemorySize of 256 MB.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Command-line: Support ?curid for command-line calls. {detected by shopuz}
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Log: Remove "current" directory; always use timestamp directory. {detected by anonymous}
-      </li>
-    </ul>
     <p>
-      <b>trivial</b>
+      As this feature is quite new, it will take some time for these wikis to be updated.
     </p>
-    <ul>
-      <li>
-        Search: Clear cache after pages are reindexed.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        App_update: Redownload update_db if download fails.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        App: Fix rare crash to desktop.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Call toString on Error, not getMessage.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Log: Delete old Download Central logs.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: /xowa/user/anonymous/app/tmp/xolog.
-      </dd>
-    </dl>
+    <p>
+      If your wiki isn't yet on Download Central, please contact me through <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_2" title="Help/Feedback" class="xowa-visited">Help/Feedback</a> and I'll add your wiki to the queue.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Building_indexes_for_already-existing_Download_Central_wikis">Building indexes for already-existing Download Central wikis</span>
+    </h3>
+    <p>
+      Full-text search indexes can also be generated within application. For more information, see <a href="http://xowa.org/home/wiki/App/Full-text_search/Lucene/Search_indexes/Building.html" id="xolnki_3" title="App/Full-text search/Lucene/Search indexes/Building" class="xowa-visited">App/Full-text_search/Lucene/Search_indexes/Building</a>
+    </p>
   
     </div>
   </div>
