--- a/home/wiki/App/Search.html
+++ b/home/wiki/App/Search.html
@@ -121,7 +121,7 @@
       XOWA can find a page by words in its title. For example, typing <code>earth</code> will pull up all titles with the word, including <span class='page-inc'>Earth</span> and <span class='page-inc'>History of Earth</span>. More complicated searches can be performed, such as <code>earth + (history, future) -middle</code>
     </p>
     <p>
-      XOWA currently cannot search by text within a page (full-text search). This will be added in a future version.
+      XOWA can also search by text within a page (full-text search). More information is available here: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_2" title="App/Full-text search">App/Full-text search</a>
     </p>
     <h2>
       <span class="mw-headline" id="Usage">Usage</span>
@@ -559,7 +559,7 @@
       By default, XOWA returns results sorted by "page length descending". In other words, the largest page would be the first in the list and the smallest page would be the last.
     </p>
     <p>
-      If a wiki is built with PageRank, or if a wiki is downloaded from archive.org, then the results will be sorted by "PageRank descending". See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_2" title="Options/Search">Options/Search</a> for enabling PageRank.
+      If a wiki is built with PageRank, or if a wiki is downloaded from archive.org, then the results will be sorted by "PageRank descending". See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_3" title="Options/Search">Options/Search</a> for enabling PageRank.
     </p>
     <h2>
       <span class="mw-headline" id="Background_database_search">Background database search</span>
@@ -598,10 +598,10 @@
     </p>
     <ul>
       <li>
-        <b>Configure PageRank</b>: See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_3" title="Options/Search">Options/Search</a>
+        <b>Configure PageRank</b>: See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_4" title="Options/Search">Options/Search</a>
       </li>
       <li>
-        <b>Configure Address bar autocomplete</b>: See <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_4" title="Options/Search suggest">Options/Search_suggest</a>
+        <b>Configure Address bar autocomplete</b>: See <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_5" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
     </ul>
   
