--- a/home/wiki/Change_log/v4.5.0.1703.html
+++ b/home/wiki/Change_log/v4.5.0.1703.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Help/Download XOWA - XOWA</title>
+  <title>Change log/v4.5.0.1703 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,91 +11,35 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Help/Download XOWA</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v4.5.0.1703</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <p>
-      All files are available at <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
-    </p>
-    <p>
-      For more details about the release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog">Blog</a> or the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_3" title="Change log">Change log</a>
-    </p>
-    <h2>
-      <span class="mw-headline" id="Windows">Windows</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_windows_64_v4.5.0.1703.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_windows_v4.5.0.1703.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Windows_64-bit_with_Java.2C_ImageMagick.2C_and_Inkscape_.28Large:_220_MB.29">Windows 64-bit with Java, ImageMagick, and Inkscape (Large: 220 MB)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_windows_64_v4.5.0.1703_w_jre.7z" rel="nofollow" class="external text">Windows with Java (64-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Linux">Linux</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_linux_64_v4.5.0.1703.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_linux_v4.5.0.1703.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Mac_OS_X">Mac OS X</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_macosx_64_v4.5.0.1703.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_macosx_v4.5.0.1703.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Raspberry_Pi">Raspberry Pi</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_arm_v4.5.0.1703.zip" rel="nofollow" class="external text">Raspberry Pi</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Android">Android</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.0.1703/xowa_app_android_v4.5.0.1703.apk" rel="nofollow" class="external text">Android</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Desktop.29">Source code (Desktop)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v4.5.0.1703.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Android.29">Source code (Android)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
-      </li>
-    </ul>
+    <div id="toc" class="toc">
+      <div id="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#v4.5.0.1703_.282017-03-29.29"><span class="tocnumber">1</span> <span class="toctext">v4.5.0.1703 (2017-03-29)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-2">
+              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#PC"><span class="tocnumber">2</span> <span class="toctext">PC</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-4">
+          <a href="#Android"><span class="tocnumber">3</span> <span class="toctext">Android</span></a>
+        </li>
+      </ul>
+    </div>
     <h2>
       <span class="mw-headline" id="v4.5.0.1703_.282017-03-29.29">v4.5.0.1703 (2017-03-29)</span>
     </h2>
@@ -109,7 +53,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_4" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -119,7 +63,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Russian_wikis.html" id="xolnki_5" title="Wiki setup/Russian wikis">Wiki_setup/Russian_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Russian_wikis.html" id="xolnki_3" title="Wiki setup/Russian wikis">Wiki_setup/Russian_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -129,7 +73,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Hindi_wikis.html" id="xolnki_6" title="Wiki setup/Hindi wikis" class="xowa-visited">Wiki_setup/Hindi_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Hindi_wikis.html" id="xolnki_4" title="Wiki setup/Hindi wikis" class="xowa-visited">Wiki_setup/Hindi_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -139,7 +83,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Tibetan_wikis.html" id="xolnki_7" title="Wiki setup/Tibetan wikis" class="xowa-visited">Wiki_setup/Tibetan_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Tibetan_wikis.html" id="xolnki_5" title="Wiki setup/Tibetan wikis" class="xowa-visited">Wiki_setup/Tibetan_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -155,7 +99,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_8" title="App/Full-text search" class="xowa-visited">App/Full-text_search</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_6" title="App/Full-text search" class="xowa-visited">App/Full-text_search</a>
       </dd>
     </dl>
     <ul>
@@ -248,7 +192,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_9" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_7" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -258,7 +202,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.wiki.hdumps.html" id="xolnki_10" title="Special:XowaCfg?grp=xowa.wiki.hdumps">Special:XowaCfg?grp=xowa.wiki.hdumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.wiki.hdumps.html" id="xolnki_8" title="Special:XowaCfg?grp=xowa.wiki.hdumps">Special:XowaCfg?grp=xowa.wiki.hdumps</a>
       </dd>
     </dl>
     <ul>
@@ -268,7 +212,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg.html" id="xolnki_11" title="Special:XowaCfg" class="xowa-visited">Special:XowaCfg</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg.html" id="xolnki_9" title="Special:XowaCfg" class="xowa-visited">Special:XowaCfg</a>
       </dd>
     </dl>
     <ul>
@@ -278,7 +222,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.url_bar.html" id="xolnki_12" title="Special:XowaCfg?grp=xowa.gui.url bar">Special:XowaCfg?grp=xowa.gui.url bar</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.url_bar.html" id="xolnki_10" title="Special:XowaCfg?grp=xowa.gui.url bar">Special:XowaCfg?grp=xowa.gui.url bar</a>
       </dd>
     </dl>
     <ul>
@@ -315,7 +259,7 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Android_2">Android</span>
+      <span class="mw-headline" id="Android">Android</span>
     </h2>
     <p>
       <b>major</b>
@@ -327,7 +271,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_13" title="App/Full-text search" class="xowa-visited">App/Full-text_search</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_11" title="App/Full-text search" class="xowa-visited">App/Full-text_search</a>
       </dd>
     </dl>
   
