--- a/home/wiki/Diagnostics/Scribunto/All.html
+++ b/home/wiki/Diagnostics/Scribunto/All.html
@@ -27,7 +27,7 @@
     </h2>
     <ul>
       <li>
-        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Basic.html" id="xolnki_2" title="Module:Diagnostics/Basic">Module:Diagnostics/Basic</a>
+        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Basic.html" id="xolnki_2" title="Module:Diagnostics/Basic" class="xowa-visited">Module:Diagnostics/Basic</a>
       </li>
       <li>
         Tests basic Scribunto functionality
