--- a/home/wiki/Options/Category.html
+++ b/home/wiki/Options/Category.html
@@ -18,10 +18,13 @@
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <div id='xocfg_body'>
+      <!-- TEXT:err_msg -->
       <div id='xocfg_err'>
       </div>
       <div>
-        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
+        <!-- BTN:info -->
+        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <!-- COMBO:cfg_grps -->
+         <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
           <option value='xowa.app.security'>
             App - Security
           </option>
@@ -45,6 +48,9 @@
           </option>
           <option value='xowa.gui.shortcuts'>
             Gui - Shortcuts
+          </option>
+          <option value='xowa.gui.nightmode'>
+            Gui - Nightmode
           </option>
           <option value='xowa.wiki.hdumps'>
             Wiki - HTML Databases
@@ -85,6 +91,9 @@
           <option value='xowa.addon.search'>
             Addon - Search
           </option>
+          <option value='xowa.addon.fulltext_search'>
+            Addon - Full-text search
+          </option>
           <option value='xowa.addon.category' selected='selected'>
             Addon - Category
           </option>
@@ -109,15 +118,14 @@
           <option value='xowa.dev.general'>
             Dev - General
           </option>
-          <option value='xowa.gui.nightmode'>
-            Gui - Night mode
-          </option>
-          <option value='xowa.addon.search.fulltext'>
-            Addon - Full text search
-          </option>
-        </select>
+        </select> <!-- LINK:cfg_link -->
+         
+        <div style='float:right;margin:2px 7px;'>
+          <a id='options_lnk'>options link</a>
+        </div>
       </div>
       <div id='cfg_grps'>
+        <!-- TEXT:page_help -->
         <div>
           <p id='page_help_para'>
           </p>
@@ -126,15 +134,16 @@
           General
         </h2>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.addon.category.catpage.missing_class")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.addon.category.catpage.missing_class__name' class='xocfg_itm_name'>
             Missing category appearance
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.addon.category.catpage.missing_class__undo' data-xocfg-type='list:xowa.addon.category.catpage.missing_class' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.addon.category.catpage.missing_class")' title="reset to &quot;red_link&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <select id="xowa.addon.category.catpage.missing_class" data-xocfg-key="xowa.addon.category.catpage.missing_class" data-xocfg-type="list:xowa.addon.category.catpage.missing_class" accesskey="d" class="xocfg_data__list" size="3">
               <option value="normal">
@@ -147,8 +156,9 @@
                 red_link
               </option>
             </select>
-          </div><input type='hidden' id='xowa.addon.category.catpage.missing_class__key_box' value='xowa.addon.category.catpage.missing_class'> <input type='hidden' id='xowa.addon.category.catpage.missing_class__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.addon.category.catpage.missing_class__key_box' value='xowa.addon.category.catpage.missing_class'> <input type='hidden' id='xowa.addon.category.catpage.missing_class__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.addon.category.catpage.missing_class_help_div' class='xohelp_div'>
           <div id='xowa.addon.category.catpage.missing_class_help_msg' class='xohelp_msg'>
             <p>
@@ -179,19 +189,21 @@
           </div>
         </div>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.addon.category.pagebox.grouping_enabled")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.addon.category.pagebox.grouping_enabled__name' class='xocfg_itm_name'>
             Page categories grouping enabled
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.addon.category.pagebox.grouping_enabled__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.addon.category.pagebox.grouping_enabled")' title="reset to &quot;y&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <input id="xowa.addon.category.pagebox.grouping_enabled" data-xocfg-key="xowa.addon.category.pagebox.grouping_enabled" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked">
-          </div><input type='hidden' id='xowa.addon.category.pagebox.grouping_enabled__key_box' value='xowa.addon.category.pagebox.grouping_enabled'> <input type='hidden' id='xowa.addon.category.pagebox.grouping_enabled__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.addon.category.pagebox.grouping_enabled__key_box' value='xowa.addon.category.pagebox.grouping_enabled'> <input type='hidden' id='xowa.addon.category.pagebox.grouping_enabled__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.addon.category.pagebox.grouping_enabled_help_div' class='xohelp_div'>
           <div id='xowa.addon.category.pagebox.grouping_enabled_help_msg' class='xohelp_msg'>
             <p>
