--- a/home/wiki/Options/HTML.html
+++ b/home/wiki/Options/HTML.html
@@ -18,10 +18,13 @@
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <div id='xocfg_body'>
+      <!-- TEXT:err_msg -->
       <div id='xocfg_err'>
       </div>
       <div>
-        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
+        <!-- BTN:info -->
+        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <!-- COMBO:cfg_grps -->
+         <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
           <option value='xowa.app.security'>
             App - Security
           </option>
@@ -45,6 +48,9 @@
           </option>
           <option value='xowa.gui.shortcuts'>
             Gui - Shortcuts
+          </option>
+          <option value='xowa.gui.nightmode'>
+            Gui - Nightmode
           </option>
           <option value='xowa.wiki.hdumps'>
             Wiki - HTML Databases
@@ -85,6 +91,9 @@
           <option value='xowa.addon.search'>
             Addon - Search
           </option>
+          <option value='xowa.addon.fulltext_search'>
+            Addon - Full-text search
+          </option>
           <option value='xowa.addon.category'>
             Addon - Category
           </option>
@@ -109,15 +118,14 @@
           <option value='xowa.dev.general'>
             Dev - General
           </option>
-          <option value='xowa.gui.nightmode'>
-            Gui - Night mode
-          </option>
-          <option value='xowa.addon.search.fulltext'>
-            Addon - Full text search
-          </option>
-        </select>
+        </select> <!-- LINK:cfg_link -->
+         
+        <div style='float:right;margin:2px 7px;'>
+          <a id='options_lnk'>options link</a>
+        </div>
       </div>
       <div id='cfg_grps'>
+        <!-- TEXT:page_help -->
         <div>
           <p id='page_help_para'>
           </p>
@@ -126,19 +134,21 @@
           Font
         </h2>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.css.font.enabled")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.css.font.enabled__name' class='xocfg_itm_name'>
             Enabled
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.css.font.enabled__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.css.font.enabled")' title="reset to &quot;n&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <input id="xowa.html.css.font.enabled" data-xocfg-key="xowa.html.css.font.enabled" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox">
-          </div><input type='hidden' id='xowa.html.css.font.enabled__key_box' value='xowa.html.css.font.enabled'> <input type='hidden' id='xowa.html.css.font.enabled__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.css.font.enabled__key_box' value='xowa.html.css.font.enabled'> <input type='hidden' id='xowa.html.css.font.enabled__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.css.font.enabled_help_div' class='xohelp_div'>
           <div id='xowa.html.css.font.enabled_help_msg' class='xohelp_msg'>
             <p>
@@ -155,19 +165,21 @@
           </div>
         </div>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.css.font.name")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.css.font.name__name' class='xocfg_itm_name'>
             Name
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.css.font.name__undo' data-xocfg-type='string' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.css.font.name")' title="reset to &quot;Arial&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <input id="xowa.html.css.font.name" data-xocfg-key="xowa.html.css.font.name" data-xocfg-type="string" accesskey="d" class="xocfg_data__str" type="text" value="Arial">
-          </div><input type='hidden' id='xowa.html.css.font.name__key_box' value='xowa.html.css.font.name'> <input type='hidden' id='xowa.html.css.font.name__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.css.font.name__key_box' value='xowa.html.css.font.name'> <input type='hidden' id='xowa.html.css.font.name__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.css.font.name_help_div' class='xohelp_div'>
           <div id='xowa.html.css.font.name_help_msg' class='xohelp_msg'>
             <p>
@@ -176,19 +188,21 @@
           </div>
         </div>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.css.font.size")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.css.font.size__name' class='xocfg_itm_name'>
             Size
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.css.font.size__undo' data-xocfg-type='string' class='xocfg_itm_delete'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.css.font.size")' title="reset to &quot;16.0&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <input id="xowa.html.css.font.size" data-xocfg-key="xowa.html.css.font.size" data-xocfg-type="string" accesskey="d" class="xocfg_data__str" type="text" value="16">
-          </div><input type='hidden' id='xowa.html.css.font.size__key_box' value='xowa.html.css.font.size'> <input type='hidden' id='xowa.html.css.font.size__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.css.font.size__key_box' value='xowa.html.css.font.size'> <input type='hidden' id='xowa.html.css.font.size__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.css.font.size_help_div' class='xohelp_div'>
           <div id='xowa.html.css.font.size_help_msg' class='xohelp_msg'>
             <p>
@@ -197,21 +211,23 @@
           </div>
         </div>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.css.font.format")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.css.font.format__name' class='xocfg_itm_name'>
             Format
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.css.font.format__undo' data-xocfg-type='memo' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.css.font.format")' title="reset to &quot;body {font-family: ~{font_name}; font-size: ~{font_size}px;}&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
 <textarea id="xowa.html.css.font.format" data-xocfg-key="xowa.html.css.font.format" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo" rows="4">
 body {font-family: ~{font_name}; font-size: ~{font_size}px;}
 </textarea>
-          </div><input type='hidden' id='xowa.html.css.font.format__key_box' value='xowa.html.css.font.format'> <input type='hidden' id='xowa.html.css.font.format__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.css.font.format__key_box' value='xowa.html.css.font.format'> <input type='hidden' id='xowa.html.css.font.format__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.css.font.format_help_div' class='xohelp_div'>
           <div id='xowa.html.css.font.format_help_msg' class='xohelp_msg'>
           </div>
@@ -220,20 +236,22 @@ body {font-family: ~{font_name}; font-size: ~{font_size}px;}
           Custom
         </h2>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.css.custom.script")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.css.custom.script__name' class='xocfg_itm_name'>
             CSS
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.css.custom.script__undo' data-xocfg-type='memo' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.css.custom.script")' title="reset to &quot;&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
 <textarea id="xowa.html.css.custom.script" data-xocfg-key="xowa.html.css.custom.script" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo" rows="4">
 </textarea>
-          </div><input type='hidden' id='xowa.html.css.custom.script__key_box' value='xowa.html.css.custom.script'> <input type='hidden' id='xowa.html.css.custom.script__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.css.custom.script__key_box' value='xowa.html.css.custom.script'> <input type='hidden' id='xowa.html.css.custom.script__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.css.custom.script_help_div' class='xohelp_div'>
           <div id='xowa.html.css.custom.script_help_msg' class='xohelp_msg'>
             <p>
