--- a/home/wiki/Options/HTML_Tidy.html
+++ b/home/wiki/Options/HTML_Tidy.html
@@ -18,10 +18,13 @@
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <div id='xocfg_body'>
+      <!-- TEXT:err_msg -->
       <div id='xocfg_err'>
       </div>
       <div>
-        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
+        <!-- BTN:info -->
+        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <!-- COMBO:cfg_grps -->
+         <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
           <option value='xowa.app.security'>
             App - Security
           </option>
@@ -45,6 +48,9 @@
           </option>
           <option value='xowa.gui.shortcuts'>
             Gui - Shortcuts
+          </option>
+          <option value='xowa.gui.nightmode'>
+            Gui - Nightmode
           </option>
           <option value='xowa.wiki.hdumps'>
             Wiki - HTML Databases
@@ -85,6 +91,9 @@
           <option value='xowa.addon.search'>
             Addon - Search
           </option>
+          <option value='xowa.addon.fulltext_search'>
+            Addon - Full-text search
+          </option>
           <option value='xowa.addon.category'>
             Addon - Category
           </option>
@@ -109,15 +118,14 @@
           <option value='xowa.dev.general'>
             Dev - General
           </option>
-          <option value='xowa.gui.nightmode'>
-            Gui - Night mode
-          </option>
-          <option value='xowa.addon.search.fulltext'>
-            Addon - Full text search
-          </option>
-        </select>
+        </select> <!-- LINK:cfg_link -->
+         
+        <div style='float:right;margin:2px 7px;'>
+          <a id='options_lnk'>options link</a>
+        </div>
       </div>
       <div id='cfg_grps'>
+        <!-- TEXT:page_help -->
         <div>
           <p id='page_help_para'>
           </p>
@@ -132,19 +140,21 @@
           General
         </h2>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.tidy.enabled")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.tidy.enabled__name' class='xocfg_itm_name'>
             Enabled
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.tidy.enabled__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.tidy.enabled")' title="reset to &quot;y&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <input id="xowa.html.tidy.enabled" data-xocfg-key="xowa.html.tidy.enabled" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked">
-          </div><input type='hidden' id='xowa.html.tidy.enabled__key_box' value='xowa.html.tidy.enabled'> <input type='hidden' id='xowa.html.tidy.enabled__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.tidy.enabled__key_box' value='xowa.html.tidy.enabled'> <input type='hidden' id='xowa.html.tidy.enabled__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.tidy.enabled_help_div' class='xohelp_div'>
           <div id='xowa.html.tidy.enabled_help_msg' class='xohelp_msg'>
             <p>
@@ -153,15 +163,16 @@
           </div>
         </div>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.tidy.engine")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.tidy.engine__name' class='xocfg_itm_name'>
             Tidy engine
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.tidy.engine__undo' data-xocfg-type='list:xowa.html.tidy.engine' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.tidy.engine")' title="reset to &quot;jtidy&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <select id="xowa.html.tidy.engine" data-xocfg-key="xowa.html.tidy.engine" data-xocfg-type="list:xowa.html.tidy.engine" accesskey="d" class="xocfg_data__list" size="2">
               <option value="tidy">
@@ -171,8 +182,9 @@
                 jtidy
               </option>
             </select>
-          </div><input type='hidden' id='xowa.html.tidy.engine__key_box' value='xowa.html.tidy.engine'> <input type='hidden' id='xowa.html.tidy.engine__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.tidy.engine__key_box' value='xowa.html.tidy.engine'> <input type='hidden' id='xowa.html.tidy.engine__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.tidy.engine_help_div' class='xohelp_div'>
           <div id='xowa.html.tidy.engine_help_msg' class='xohelp_msg'>
             <p>
@@ -192,20 +204,22 @@
           Tidy binary
         </h2>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.html.tidy.cmd")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.html.tidy.cmd__name' class='xocfg_itm_name'>
             Process
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.html.tidy.cmd__undo' data-xocfg-type='io.cmd' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.tidy.cmd")' title="reset to &quot;~{&lt;&gt;bin_plat_dir&lt;&gt;}tidy\tidy|-utf8 --force-output y --quiet y --tidy-mark n --doctype '' --wrap 0 --indent y --quote-nbsp y --literal-attributes y --wrap-attributes n --fix-uri n --fix-backslash n --enclose-block-text y -o &quot;~{target}&quot; &quot;~{source}&quot;&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <input class="xocfg_data__io_cmd__exe__txt" id="xowa.html.tidy.cmd-exe" data-xocfg-key="xowa.html.tidy.cmd" data-xocfg-type="io.cmd-exe" accesskey="d" type="text" value="~{&lt;&gt;bin_plat_dir&lt;&gt;}tidy\tidy"> <span class="xoimg_btn_x16 xoimg_app_configure" onclick='xo.cfg_edit.io_cmd__select("file", "xowa.html.tidy.cmd-exe", "Please select a file.");'>&nbsp;</span><br>
             <input class="xocfg_data__io_cmd__arg__txt" id="xowa.html.tidy.cmd-arg" data-xocfg-key="xowa.html.tidy.cmd" data-xocfg-type="io.cmd-arg" accesskey="d" type="text" value="-utf8 --force-output y --quiet y --tidy-mark n --doctype '' --wrap 0 --indent y --quote-nbsp y --literal-attributes y --wrap-attributes n --fix-uri n --fix-backslash n --enclose-block-text y -o &quot;~{target}&quot; &quot;~{source}&quot;">
-          </div><input type='hidden' id='xowa.html.tidy.cmd__key_box' value='xowa.html.tidy.cmd'> <input type='hidden' id='xowa.html.tidy.cmd__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.html.tidy.cmd__key_box' value='xowa.html.tidy.cmd'> <input type='hidden' id='xowa.html.tidy.cmd__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.html.tidy.cmd_help_div' class='xohelp_div'>
           <div id='xowa.html.tidy.cmd_help_msg' class='xohelp_msg'>
             <p>
