--- a/home/wiki/Options/HTTP_server.html
+++ b/home/wiki/Options/HTTP_server.html
@@ -18,10 +18,13 @@
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <div id='xocfg_body'>
+      <!-- TEXT:err_msg -->
       <div id='xocfg_err'>
       </div>
       <div>
-        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
+        <!-- BTN:info -->
+        <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.cfg_edit.help__toggle_all()' title='toggle all help'>&nbsp;</span> <!-- COMBO:cfg_grps -->
+         <select id='xocfg_nav_select' onchange='xo.cfg_edit.select__send(this);' onkeyup='xo.cfg_edit.select__by_keypress(event, this);' accesskey='l'>
           <option value='xowa.app.security'>
             App - Security
           </option>
@@ -45,6 +48,9 @@
           </option>
           <option value='xowa.gui.shortcuts'>
             Gui - Shortcuts
+          </option>
+          <option value='xowa.gui.nightmode'>
+            Gui - Nightmode
           </option>
           <option value='xowa.wiki.hdumps'>
             Wiki - HTML Databases
@@ -85,6 +91,9 @@
           <option value='xowa.addon.search'>
             Addon - Search
           </option>
+          <option value='xowa.addon.fulltext_search'>
+            Addon - Full-text search
+          </option>
           <option value='xowa.addon.category'>
             Addon - Category
           </option>
@@ -109,15 +118,14 @@
           <option value='xowa.dev.general'>
             Dev - General
           </option>
-          <option value='xowa.gui.nightmode'>
-            Gui - Night mode
-          </option>
-          <option value='xowa.addon.search.fulltext'>
-            Addon - Full text search
-          </option>
-        </select>
+        </select> <!-- LINK:cfg_link -->
+         
+        <div style='float:right;margin:2px 7px;'>
+          <a id='options_lnk'>options link</a>
+        </div>
       </div>
       <div id='cfg_grps'>
+        <!-- TEXT:page_help -->
         <div>
           <p id='page_help_para'>
           </p>
@@ -126,19 +134,21 @@
           General
         </h2>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.addon.http_server.port")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.addon.http_server.port__name' class='xocfg_itm_name'>
             Port
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.addon.http_server.port__undo' data-xocfg-type='int' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.addon.http_server.port")' title="reset to &quot;8080&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <input id="xowa.addon.http_server.port" data-xocfg-key="xowa.addon.http_server.port" data-xocfg-type="int" accesskey="d" class="xocfg_data__int" type="text" value="8080">
-          </div><input type='hidden' id='xowa.addon.http_server.port__key_box' value='xowa.addon.http_server.port'> <input type='hidden' id='xowa.addon.http_server.port__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.addon.http_server.port__key_box' value='xowa.addon.http_server.port'> <input type='hidden' id='xowa.addon.http_server.port__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.addon.http_server.port_help_div' class='xohelp_div'>
           <div id='xowa.addon.http_server.port_help_msg' class='xohelp_msg'>
             <p>
@@ -147,15 +157,16 @@
           </div>
         </div>
         <div class="xocfg_row flex_div">
+          <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
             <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.addon.http_server.file_retrieve_mode")' title='view more info'>&nbsp;</span>
-          </div>
+          </div><!-- TEXT:key -->
           <div id='xowa.addon.http_server.file_retrieve_mode__name' class='xocfg_itm_name'>
             File retrieve mode
-          </div>
+          </div><!-- BTN:undo -->
           <div id='xowa.addon.http_server.file_retrieve_mode__undo' data-xocfg-type='list:xowa.addon.http_server.file_retrieve_mode' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.addon.http_server.file_retrieve_mode")' title="reset to &quot;wait&quot;">&nbsp;</span>
-          </div>
+          </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <select id="xowa.addon.http_server.file_retrieve_mode" data-xocfg-key="xowa.addon.http_server.file_retrieve_mode" data-xocfg-type="list:xowa.addon.http_server.file_retrieve_mode" accesskey="d" class="xocfg_data__list" size="3">
               <option value="wait" selected="selected">
@@ -168,8 +179,9 @@
                 async server
               </option>
             </select>
-          </div><input type='hidden' id='xowa.addon.http_server.file_retrieve_mode__key_box' value='xowa.addon.http_server.file_retrieve_mode'> <input type='hidden' id='xowa.addon.http_server.file_retrieve_mode__ctx_box' value='app'>
-        </div>
+          </div><!-- HIDDEN:key,ctx -->
+          <input type='hidden' id='xowa.addon.http_server.file_retrieve_mode__key_box' value='xowa.addon.http_server.file_retrieve_mode'> <input type='hidden' id='xowa.addon.http_server.file_retrieve_mode__ctx_box' value='app'>
+        </div><!-- DIV:help -->
         <div id='xowa.addon.http_server.file_retrieve_mode_help_div' class='xohelp_div'>
           <div id='xowa.addon.http_server.file_retrieve_mode_help_msg' class='xohelp_msg'>
             <p>
